# nix-derivation-pretty

./: .gitignore  .travis.yml  LICENSE  README.md  default.nix  nix-derivation-pretty.cabal  nix-derivation-pretty.nix  shell.nix
app/: Main.hs
src/Nix/Derivation/: Pretty.hs
src/Nix/Derivation/Pretty/: JSON.hs  Opts.hs  Orphans.hs
