name: nix-derivation-pretty
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright Piotr Bogdan (c) 2017
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/nix-derivation-pretty
synopsis: Pretty printer for Nix derivations.
description:
    Pretty printer for Nix derivations.
category: System
author: Piotr Bogdan

library
    exposed-modules:
        Nix.Derivation.Pretty
    other-modules:
        Nix.Derivation.Pretty.Opts
        Nix.Derivation.Pretty.Orphans
    build-depends:
        base >=4.9 && <4.10,
        attoparsec >=0.13.1 && <0.14,
        containers >=0.5.7 && <0.6,
        text >=1.2.2 && <1.3,
        vector >=0.11.0 && <0.12,
        nix-derivation >=1.0.0 && <1.1,
        system-filepath >=0.4.13 && <0.5,
        optparse-applicative >=0.13.2 && <0.14,
        pretty-show >=1.6.13 && <1.7,
        prettyprinter >=1.0 && <1.2,
        prettyprinter-ansi-terminal >=1.0 && <1.2,
        protolude >=0.1.10 && <0.2,
        temporary >= 1.2,
        shell-cmd >= 0.2,
        bifunctors >= 5.4,
        extra >=1.5.0
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

executable pp-drv
    main-is: Main.hs
    build-depends:
        base >=4.9.0.0 && <4.10,
        nix-derivation-pretty -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall

