name: nix-derivation-pretty
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright Piotr Bogdan (c) 2017
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/nix-derivation-pretty
synopsis: Pretty printer for Nix derivations.
description:
    Pretty printer for Nix derivations.
category: System
author: Piotr Bogdan

library
    exposed-modules:
        Nix.Derivation.Pretty
    build-depends:
        base >=4.9 && < 4.11,
        attoparsec >=0.13.1 && <0.14,
        containers >=0.5.7 && <0.6,
        text >=1.2.2 && <1.3,
        vector >=0.11.0,
        nix-derivation >=1.0.0 && <1.1,
        system-filepath >=0.4.13 && <0.5,
        optparse-applicative >=0.13.2 && < 0.15,
        pretty-show >=1.6.13 && <1.7,
        prettyprinter >=1.0 && <1.3,
        prettyprinter-ansi-terminal >=1.0 && <1.3,
        protolude >=0.1.10 && < 0.3
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Nix.Derivation.Pretty.Opts
        Nix.Derivation.Pretty.Orphans
    ghc-options: -Wall

executable pp-drv
    main-is: Main.hs
    build-depends:
        base >=4.9 && < 4.11,
        nix-derivation-pretty -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall

